# weather-app

./: .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  update_placeholders.py  weather.py
.github/workflows/: ci.yml
src/weather_app/: __init__.py  cli.py  config.py  exceptions.py  weather.py
tests/: __init__.py  test_cli.py  test_weather.py
