[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-app"
version = "0.1.0"
description = "A professional weather application that fetches and displays weather data"
authors = [
    {name = "dani931004", email = "pythonmaildev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dani931004/weather-app"
"Bug Tracker" = "https://github.com/dani931004/weather-app/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.5b2",
    "isort>=5.8.0",
    "mypy>=0.812",
]
